[package]
name = "sjlj2"
version = "0.3.1"
edition = "2021"
description = "Safer, cheaper and more ergonomic setjmp/longjmp in Rust"
documentation = "https://docs.rs/sjlj2"
categories = ["embedded", "no-std::no-alloc"]
keywords = ["setjmp", "longjmp"]
repository = "https://github.com/oxalica/sjlj2"
license = "MIT OR Apache-2.0"
exclude = ["flake.nix", "flake.lock"]
# NB. Sync with CI!
rust-version = "1.87" # asm_goto

[features]
default = []
unwind = []

[dependencies]

[dev-dependencies]
criterion = "0.5.1"

[target.'cfg(target_os = "linux")'.dev-dependencies]
pprof = { version = "0.14.0", default-features = false }

[[bench]]
name = "bench"
harness = false

[[example]]
name = "codegen_std"
crate-type = ["staticlib"]

[[example]]
name = "codegen_nostd"
crate-type = ["staticlib"]

[profile.release]
debug = "line-tables-only"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Inlining `set_jump` to achieve the advertized good performance, by avoiding
# closure call cost.
inline_always = "allow"

# False positive on `ARMv8`.
doc_markdown = "allow"
