[package]
name = "sjlj2"
version = "0.5.0"
edition = "2024"
description = "Safer, cheaper and more ergonomic setjmp/longjmp in Rust"
documentation = "https://docs.rs/sjlj2"
categories = ["embedded", "no-std::no-alloc"]
keywords = ["setjmp", "longjmp"]
repository = "https://github.com/oxalica/sjlj2"
license = "MIT OR Apache-2.0"
exclude = ["flake.nix", "flake.lock", ".github"]
# NB. Sync with CI!
rust-version = "1.93" # asm_cfg

[features]
default = []
unwind = []

[dependencies]

[dev-dependencies]
criterion = "0.8"

[target.'cfg(target_os = "linux")'.dev-dependencies]
pprof = { version = "0.15.0", default-features = false }

[[bench]]
name = "bench"
harness = false

[[example]]
name = "codegen"
crate-type = ["staticlib"]

[profile.release]
debug = "line-tables-only"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
